	* Moved 'configure.in' to 'configure.ac'.
	* Modernized the invocation of AM_INIT() and AC_INIT() in
	'configure.ac'.
	* Removed 'INCLUDES' definition from 'mcallman/Makefile.am',
	'mcidmd/Makefile.am', 'mcs/Makefile.am', 'mdbadmin/Makefile.am',
	'ml/Makefile.am', 'mld/Makefile.am', 'mlmh/Makefile.am',
	'mlmld/Makefile.am' and 'scripts/Makefile.am'.
	* Added an include for 'unistd.h' in 'libp/mldconfig.cpp' to
	fix broken compilation under RHEL 7.
	* Added '-ldl' to the list of linked libraries in 'mlmh/Makefile.am'
	to fix broken compilation under RHEL 7.
2014-09-17 Fred Gleason <fredg@paravelsystems.com>
	* Added 'html_gpl2.cpp' to the 'MAINTAINERCLEANFILES' rule in
	'libp/Makefile.am'.
2014-09-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed warnings in 'libp/asterisk_driver.cpp'.
	* Fixed warnings in 'libp/edit_connection_data.cpp'.
	* Fixed warnings in 'libp/escapestring.cpp'.
	* Fixed warnings in 'libp/message_data.cpp'.
	* Fixed warnings in 'libp/ml_timeslot.cpp'.
	* Fixed warnings in 'libp/mlconf.cpp'.
	* Fixed warnings in 'libp/mllabel.cpp'.
	* Fixed warnings in 'libp/mlttydevice.cpp'.
	* Fixed warnings in 'mlhpi/mlplaystream.cpp'.
	* Fixed warnings in 'mlhpi/mlsoundcard.cpp'.
	* Fixed warnings in 'mlhpi/mlrecordstream.cpp'.
	* Fixed warnings in 'mlhpi/mlwavefile.cpp'.
	* Fixed warnings in 'mdbadmin/edit_show.cpp'.
	* Fixed warnings in 'mdbadmin/opendb.cpp'.
	* Fixed warnings in 'mcallman/standard_age_report.cpp'.
	* Fixed warnings in 'mlm/mlm_airtools.c'.
	* Fixed warnings in 'mlm/mlm_remora.c'.
	* Fixed warnings in 'mlmh/mlm_functions.cpp'.
	* Fixed warnings in 'mlmh/vguest.cpp'.
	* Fixed warnings in 'mcs/mskimmer_widget.cpp'.
2014-09-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'libp/mlpushbutton.cpp' that broke compilation
	on OS X MAvericks.
	* Fixed a bug in 'configure.ac' that broke compilation
	on OS X MAvericks.
	* Added 'compile' and 'ltmain.sh' to the MAINTAINERCLEANFILES list
	in 'Makefile.am'.